gcp/k8s/containerxdr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: containerxdr
  namespace: boring-media-co
  labels:
    cloud-provider: gcp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: containerxdr
  template:
    metadata:
      labels:
        app: containerxdr
        cloud-provider: gcp
    spec:
      containers:
      - name: containerxdr
        image: us-central1-docker.pkg.dev/justin-dev-412922/boringmediaco-containerxdr/boringmediaco/containerxdr:latest
        ports:
        - containerPort: 8081
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
            add:
            - CHOWN
            - SETGID
            - SETUID
            - NET_BIND_SERVICE
          runAsNonRoot: true
          runAsUser: 1000
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: containerxdr-service
  namespace: boring-media-co
  labels:
    cloud-provider: gcp
spec:
  selector:
    app: containerxdr
  ports:
  - port: 8081
    targetPort: 8081
  type: ClusterIP
