gcp/k8s/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: boring-media-co
  labels:
    cloud-provider: gcp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
        cloud-provider: gcp
    spec:
      containers:
      - name: ui
        image: us-central1-docker.pkg.dev/justin-dev-412922/boringmediaco-ui/boringmediaco/ui:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  namespace: boring-media-co
  labels:
    cloud-provider: gcp
spec:
  selector:
    app: ui
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
